# spotify-player

./: .gitignore  README.md
spotify-player-api/: .env  Cargo.toml  README.md
spotify-player-api/src/: main.rs
spotify-player-api/src/errors/: model.rs
spotify-player-api/src/spotify/: mod.rs
spotify-player-api/src/spotify/auth/: handler.rs
spotify-player-api/src/spotify/token/: handler.rs  model.rs
spotify-player-app/: .gitignore  package.json
