[package]
name = "spotify-player-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
axum = "0.7.5"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
async-trait = "0.1.81"
serde = { version = "1.0.209", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
rand = "0.8.5"
base64 = "0.22.1"
serde_json = "1.0.127"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
dotenv = "0.15.0"
